--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass-chokidar": "^1.4.0",
     "react": "^16.13.1",
+    "react-bodymovin": "^2.0.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "npm run watch:sass | react-scripts start",
-    "watch": "npm run build:sass && node-sass-chokidar src/styles -o src/styles --watch --recursive --include-path",
+    "build:sass": "node-sass-chokidar src/styles/ -o src/styles/",
+    "watch:sass": "npm run build:sass && node-sass-chokidar src/styles/ -o src/styles/ --watch --recursive --include-path",
     "build": "react-scripts build",
-    "build:sass": "node-sass-chokidar src/styles -o src/styles",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
