--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^5.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toast-notifications": "^2.4.0",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
