--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "node-sass-chokidar": "^1.4.0",
     "react": "^16.13.1",
     "react-bodymovin": "^2.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.6.0",
     "react-router-dom": "^5.1.2",
