--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-bodymovin": "^2.0.0",
     "react-bootstrap-table-next": "^4.0.2",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.6.0",
